--- a/app/assets/stylesheets/modules/layout.css.scss
+++ b/app/assets/stylesheets/modules/layout.css.scss
@@ -46,7 +46,7 @@ body {
     }
 
     &.is-master-overlay-secondary-hidden {
-      flex: 0 1 535px;
+      flex: 0 1 265px;
     }
   }
 
